--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<!-- Шапка -->
+		<!-- HEADER -->
 		<header class="header">
 			<!-- Головна навігація -->
 			<div class="main-nav container">
@@ -38,9 +38,18 @@
 				<!-- Контакти -->
 				<ul class="contact list">
 					<li class="contact-item">
-						<a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a>
+						<a href="mailto:info@devstudio.com" class="contact-link link">
+							<svg class="contact-icon" width="16" height="12">
+								<use href="./images/icons.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com</a>
 					</li>
-					<li class="contact-item"><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
+					<li class="contact-item">
+						<a href="tel:+380961111111" class="contact-link link">
+							<svg class="contact-icon" width="10" height="16">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11</a></li>
 				</ul>
 			</div>
 		</header>
@@ -62,25 +71,41 @@
 				<div class="container">
 					<h2 class="visually-hidden">Преимущества компании</h2>
 					<ul class="list">
-						<li class="benefits-item">
+						<li class="benefits-item"><div class="benefits-decor">
+							<svg class="benefits-icon" width="70" height="70">
+								<use href="./images/icons.svg#icon-antenna"></use>
+							</svg>
+						</div>
 							<h3 class="benefits-title">Внимание к деталям</h3>
 							<p class="benefits-text">
 								Идейные соображения, а также начало повседневной работы по формированию позиции.
 							</p>
 						</li>
-						<li class="benefits-item">
+						<li class="benefits-item"><div class="benefits-decor">
+							<svg class="benefits-icon" width="70" height="70">
+								<use href="./images/icons.svg#icon-clock"></use>
+							</svg>
+						</div>
 							<h3 class="benefits-title">Пунктуальность</h3>
 							<p class="benefits-text">
 								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 							</p>
 						</li>
-						<li class="benefits-item">
+						<li class="benefits-item"><div class="benefits-decor">
+							<svg class="benefits-icon" width="70" height="70">
+								<use href="./images/icons.svg#icon-diagram"></use>
+							</svg>
+						</div>
 							<h3 class="benefits-title">Планирование</h3>
 							<p class="benefits-text">
 								Равным образом консультация с широким активом в значительной степени обуславливает.
 							</p>
 						</li>
-						<li class="benefits-item">
+						<li class="benefits-item"><div class="benefits-decor">
+							<svg class="benefits-icon" width="70" height="70">
+								<use href="./images/icons.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 							<h3 class="benefits-title">Современные технологии</h3>
 							<p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
@@ -108,12 +133,42 @@
 			<section class="team section">
 				<div class="container">
 					<h2 class="section-title">Наша команда</h2>
-					<ul class="list">
+					<ul class="team-list list">
 						<li class="team-card">
 							<img src="./images/product-designer.jpg" alt="Фото" width="270" />
 							<div class="card-content">
 								<h3 class="team-title">Игорь Демьяненко</h3>
 								<p lang="en" class="team-text">Product Designer</p>
+								<ul class="team-soc-list list">
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="instagram">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="twitter">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="facebook">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="linkedin">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-card">
@@ -121,6 +176,36 @@
 							<div class="card-content">
 								<h3 class="team-title">Ольга Репина</h3>
 								<p lang="en" class="team-text">Frontend Developer</p>
+								<ul class="team-soc-list list">
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="instagram">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="twitter">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="facebook">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="linkedin">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-card">
@@ -128,6 +213,36 @@
 							<div class="card-content">
 								<h3 class="team-title">Николай Тарасов</h3>
 								<p lang="en" class="team-text">Marketing</p>
+								<ul class="team-soc-list list">
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="instagram">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="twitter">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="facebook">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="linkedin">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-card">
@@ -135,16 +250,98 @@
 							<div class="card-content">
 								<h3 class="team-title">Михаил Ермаков</h3>
 								<p lang="en" class="team-text">UI Designer</p>
+								<ul class="team-soc-list list">
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="instagram">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="twitter">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="facebook">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-soc-item">
+										<a href="" class="team-soc-link link" aria-label="linkedin">
+											<svg class="team-soc-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 					</ul>
 				</div>
 			</section>
+			<!-- Clients -->
+			<section class="clients section">
+				<div class="container">
+					<h2 class="section-title">Постоянные клиенты</h2>
+					<ul class="clients-list list">
+						<li class="clients-item">
+							<a href="" class="clients-link link">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./images/icons.svg#icon-logo1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-item">
+							<a href="" class="clients-link link">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./images/icons.svg#icon-logo2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-item">
+							<a href="" class="clients-link link">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./images/icons.svg#icon-logo3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-item">
+							<a href="" class="clients-link link">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./images/icons.svg#icon-logo4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-item">
+							<a href="" class="clients-link link">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./images/icons.svg#icon-logo5"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-item">
+							<a href="" class="clients-link link">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./images/icons.svg#icon-logo6"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</section>
 		</main>
-		<!-- Футер -->
+		<!-- Footer -->
 		<footer class="footer">
 			<div class="container">
-				<a href="./index.html" lang="en" class="logo link">
+				<div class="footer-address">
+					<h2 class="visually-hidden">Контакты</h2>
+					<a href="./index.html" lang="en" class="logo link">
 					Web<span class="accent">Studio</span>
 				</a>
 				<!-- Контактні дані компанії -->
@@ -157,6 +354,40 @@
 						<li class="address-item"><a href="tel:+380991111111" class="contacts-link link">+38 099 111 11 11</a></li>
 					</ul>
 				</address>
+				</div>
+				<div class="footer-joinus">
+					<h2 class="joinus-title">присоединяйтесь</h2>
+					<ul class="joinus-list list">
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="instagram">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="twitter">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="facebook">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="linkedin">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
