--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<!-- Шапка -->
+		<!-- HEADER -->
 		<header class="header">
 			<!-- Головна навігація -->
 			<div class="main-nav container">
@@ -38,9 +38,18 @@
 				<!-- Контакти -->
 				<ul class="contact list">
 					<li class="contact-item">
-						<a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a>
+						<a href="mailto:info@devstudio.com" class="contact-link link">
+							<svg class="contact-icon" width="16" height="12">
+								<use href="./images/icons.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com</a>
 					</li>
-					<li class="contact-item"><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
+					<li class="contact-item">
+						<a href="tel:+380961111111" class="contact-link link">
+							<svg class="contact-icon" width="10" height="16">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11</a></li>
 				</ul>
 			</div>
 		</header>
@@ -164,10 +173,12 @@
 				</ul>
 			</div>
 		</main>
-		<!-- Футер -->
+	<!-- Footer -->
 		<footer class="footer">
 			<div class="container">
-				<a href="./index.html" lang="en" class="logo link">
+				<div class="footer-address">
+					<h2 class="visually-hidden">Контакты</h2>
+					<a href="./index.html" lang="en" class="logo link">
 					Web<span class="accent">Studio</span>
 				</a>
 				<!-- Контактні дані компанії -->
@@ -180,6 +191,40 @@
 						<li class="address-item"><a href="tel:+380991111111" class="contacts-link link">+38 099 111 11 11</a></li>
 					</ul>
 				</address>
+				</div>
+				<div class="footer-joinus">
+					<h2 class="joinus-title">присоединяйтесь</h2>
+					<ul class="joinus-list list">
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="instagram">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="twitter">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="facebook">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="joinus-item">
+										<a href="" class="joinus-link link" aria-label="linkedin">
+											<svg class="joinus-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
